# circom_cvm

./: Cargo.toml
cfg_ssa/: Cargo.toml
cfg_ssa/src/: ast.rs  lib.rs  type_checking.rs  types.rs
cfg_ssa/src/tests/: mod.rs
cfg_ssa/src/tests/type_checking_tests/: finite_field_tests.rs  if_loop_tests.rs  integer_tests.rs  mod.rs
cvm_integration_tests/: .gitignore  Cargo.toml
cvm_integration_tests/src/: lib.rs
cvm_parser/: .gitignore  Cargo.toml
cvm_parser/src/: initial_parsers.rs  lib.rs  operation_parsers.rs  token.rs
cvm_parser/test/: sha256_2_test.cvm  sum_test.cvm  test_program.cvm
